--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "bootstrap": "^5.3.3",
     "next": "15.0.3",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.5",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
     "@types/node": "^20",
